--- a/src/views/clinic-panel/layouts/index.ejs
+++ b/src/views/clinic-panel/layouts/index.ejs
@@ -26,7 +26,9 @@
   </head>
 
   <body>
+     <%- include("../partials/navbar") %>
     <%- body %>
+    <%- include("../partials/footer") %>
 
     <script src="../user/js/location.js"></script>
     <!-- Bootstrap 5 -->
