--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -1,6 +1,5 @@
 <div class="tm-main-content" id="top">
 
-    <%- include("../partials/navbar")  %> 
 
   <!--======= FOLLOW BAR =====-->
   <div id="section-i" class="tm-p-3 tm-pt-20">
@@ -11,12 +10,12 @@
           Tamamlandı
         </div>
         <div class="tm-step active">
-          Hizmetler
+          Doktorlar
           <div class="tm-s-steps">
             <div class="tm-s-step"></div>
+            <div class="tm-s-step"></div>
+            <div class="tm-s-step"></div>
             <div class="tm-s-step active"></div>
-            <div class="tm-s-step"></div>
-            <div class="tm-s-step"></div>
           </div>
         </div>
         <div class="tm-step">Önizleme</div>
@@ -24,112 +23,86 @@
     </div>
   </div>
 
-  <!--======= TEDAVİ İMKANLARI =====-->
   <div id="section-ii" class="tm-p-3 tm-pb-20">
     <div class="container">
       <div class="row">
+        <!--======= MERKEZ SAĞLIK ÇALIŞANLARI =====-->
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <div class="tm-section-title tm-clinic-title">Tedavi İmkanları</div>
+          <div class="tm-section-title tm-clinic-title">Merkez Sağlık Çalışanları</div>
           <form class="tm-form-wide">
             <div class="form-box">
-              <div class="title">Diyaliz Tedavi Tipleri</div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Hemodiyaliz </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hemodiyafiltrasyon </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Merkezde Gece Hemodiyalizi </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Ev Hemodiyalizi </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Hemşireli Ev Hemodiyalizi </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Periton Diyalizi </label>
+              <div class="title">MSağlık Çalışanı Adı Soyadı</div>
+              <div class="form-group">
+                <input type="text" class="form-control" id="center-name" placeholder="Sağlık Çalışanı Adı Soyadı" />
               </div>
             </div>
             <div class="form-box">
-              <div class="title">Seans İçi Hizmetler</div>
+              <div class="title">Merkezimizdeki Görevi</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Seans İçi Yiyecek Sunumu </label>
+                <label class="form-check-label selected" for="flexCheckChecked"> Nefroloji Uzmanı </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Ücretsiz Ulaşım Hizmeti </label>
+                <label class="form-check-label" for="flexCheckChecked"> Nefroloji Uzmanı </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Kişiye Özel Tv Hizmeti </label>
+                <label class="form-check-label" for="flexCheckChecked"> Mesul Müdür </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Ücretsiz Wifi Hizmeti </label>
+                <label class="form-check-label" for="flexCheckChecked"> Sorumlu Hekim </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Tedavi Salonlarında Klima </label>
+                <label class="form-check-label" for="flexCheckChecked"> Merkez Başhemşiresi </label>
+              </div>
+              <div class="form-group not-border checkbox">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
+                <label class="form-check-label" for="flexCheckChecked"> Diyetisyen </label>
               </div>
             </div>
             <div class="form-box">
-              <div class="title">Konuşulan Diller (Personel)</div>
+              <div class="title">Akademik Eğitim Durumunu Seçiniz</div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Türkçe </label>
+                <label class="form-check-label selected" for="flexCheckChecked"> Profesör </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> İngilizce </label>
+                <label class="form-check-label" for="flexCheckChecked"> Uzman Hekim </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Rusça </label>
+                <label class="form-check-label" for="flexCheckChecked"> Doktor </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Arapça </label>
+                <label class="form-check-label" for="flexCheckChecked"> Hemşire </label>
               </div>
               <div class="form-group not-border checkbox">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> İspanyolca </label>
-              </div>
-              <div>
-                <a href="#" class="tm-link">Farklı bir dil eklemek için tıklayın</a>
+                <label class="form-check-label" for="flexCheckChecked"> Diyetisyen </label>
               </div>
             </div>
-            <div class="form-box">
-              <div class="title">Tercüman Hizmeti</div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
-                <label class="form-check-label selected" for="flexCheckChecked"> Ücretli </label>
-              </div>
-              <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
-                <label class="form-check-label" for="flexCheckChecked"> Ücretsiz </label>
-              </div>
+            <div class="clinic-doctors">
+              <div class="title">Sağlık Çalışanları</div>
+              <div class="text">Nefroloji Uzmanı: Prof. Dr. Gülçin Kantarcı</div>
+              <div class="text">Mesul Müdür: Dr. Mehtap Çelik Küçük</div>
+              <div class="text">Sorumlu Hekim: Dr. Tekbir Atay</div>
             </div>
           </form>
 
           <!--======= PAGINATION =====-->
           <div class="tm-button-next left">
-            <a href="./clinic-details.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-            <a href="./clinic-payment-option.html" class="btn-second">Sonraki Adım</a>
+            <a href="./clinic-payment-option.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
+            <a href="./clinic-summary.html" class="btn-second">Sonraki Adım</a>
           </div>
         </div>
+        <!--======= INFORMATION CARD =====-->
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-          <div class="tm-section-title tm-clinic-subtitle mt-1">Bu Adımı Atla</div>
-
-          <!--======= INFORMATION CARD =====-->
+          <div class="tm-section-title tm-clinic-subtitle">Bu Adımı Atla</div>
           <div class="tm-box-info">
             <div class="tm-box-top">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
@@ -139,7 +112,6 @@
               <div>Bu bilgileri dilediğiniz gibi sonra doldurabilirsiniz fakat Dialysing.com olarak tüm bilgileri eksiksiz ve sırasıyla doldurmanızı ziyaretçilerinizin dikkatini daha fazla çekebilmeniz adına öneriyoruz</div>
             </div>
           </div>
-          <!--======= INFORMATION CARD =====-->
           <div class="tm-box-info">
             <div class="tm-box-top">
               <img src="../user/img/clinic/attention.png" alt="Attention Icon" />
@@ -155,6 +127,6 @@
     </div>
   </div>
 
-  <%- include("../partials/footer")  %> 
+
 
 </div>
