clinic add pages updated

--- a/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
@@ -1,96 +1,85 @@
-    <div class="tm-main-content" id="top">
-
-
-        <!--======= FOLLOW BAR =====-->
-        <div id="section-i" class="tm-p tm-pt-20">
-            <div class="container">
-                <div class="container">
-                    <div class="container">
-                        <div class="tm-steps">
-                            <div class="tm-step active">
-                                Merkez Bilgileri
-                                <div class="tm-s-steps">
-                                    <div class="tm-s-step"></div>
-                                    <div class="tm-s-step"></div>
-                                    <div class="tm-s-step"></div>
-                                    <div class="tm-s-step active"></div>
-                                    <div class="tm-s-step"></div>
-                                </div>
-                            </div>
-                            <div class="tm-step">
-                                Merkez Detayları
-                            </div>
-                            <div class="tm-step">
-                                Önizleme
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div class="tm-main-content" id="top">
+  <!--======= FOLLOW BAR =====-->
+  <div id="section-i" class="tm-p tm-pt-20">
+    <div class="container">
+      <div class="container">
+        <div class="container">
+          <div class="tm-steps">
+            <div class="tm-step active">
+              Merkez Bilgileri
+              <div class="tm-s-steps">
+                <div class="tm-s-step"></div>
+                <div class="tm-s-step"></div>
+                <div class="tm-s-step"></div>
+                <div class="tm-s-step active"></div>
+                <div class="tm-s-step"></div>
+              </div>
             </div>
+            <div class="tm-step">Merkez Detayları</div>
+            <div class="tm-step">Önizleme</div>
+          </div>
         </div>
-
-        <!--======= INFORMATION =====-->
-        <div id="section-ii" class="tm-margin-3">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                        <div class="tm-section-title">Adres Bilgileri</div>
-                        <form class="tm-form-wide">
-                            <div class="form-group">
-                              <label for="country-name">Ülke</label>
-                              <input type="text" class="form-control" id="country-name" placeholder="Ülke">
-                            </div>
-                            <div class="form-group">
-                                <label for="city-name">İl</label>
-                                <input type="text" class="form-control" id="city-name" placeholder="İl">
-                            </div>
-                            <div class="form-group">
-                                <label for="address">Adres</label>
-                                <input type="text" class="form-control" id="address" placeholder="Adres">
-                            </div>
-                            <div class="form-group">
-                                <label for="tax-center-number">Posta Kodu</label>
-                                <input type="number" class="form-control" id="tax-center-number" placeholder="Posta Kodu">
-                            </div>
-                        </form>
-                    </div>
-                    <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-                        <div class="tm-section-title">İletişim Bilgileri</div>
-                        <form class="tm-form-wide">
-                            <div class="form-group">
-                              <label for="center-phone">Merkez Telefonu</label>
-                              <input type="tel" class="form-control" id="center-phone" placeholder="Merkez Telefonu">
-                            </div>
-                            <div class="form-group">
-                                <label for="whatsapp-address">Merkez Whatsapp No</label>
-                                <input type="tel" class="form-control" id="whatsapp-phone" placeholder="Merkez Whatsapp No">
-                            </div>
-                            <div class="form-group">
-                                <label for="website">Websitesi</label>
-                                <input type="text" class="form-control" id="website" placeholder="Websitesi">
-                            </div>
-                            <div class="form-group">
-                                <label for="center-about">Merkeziniz Hakkında</label>
-                                <textarea class="form-control" id="center-about" rows="3" placeholder="Hakkında"></textarea>
-                            </div>
-                            <div class="tm-text-info">Merkezin sizin olduğunu doğrulayabilmemiz için bu bilgilerin doğru ve eksiksiz girildiğinden emin olun.</div>
-                          </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!--======= PAGINATION =====-->
-        <div id="section-iii" class="tm-p tm-pb-20">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tm-button-next">
-                        <a href="./clinic-company-information.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-                        <a href="./clinic-address-correction.html" class="btn-second">Sonraki Adım</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        
+      </div>
     </div>
+  </div>
+
+  <!--======= INFORMATION =====-->
+  <div id="section-ii" class="tm-margin-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+          <div class="tm-section-title">Adres Bilgileri</div>
+          <form class="tm-form-wide">
+            <div class="form-group">
+              <label for="country-name">Ülke</label>
+              <input type="text" class="form-control" id="country-name" placeholder="Ülke" />
+            </div>
+            <div class="form-group">
+              <label for="city-name">İl</label>
+              <input type="text" class="form-control" id="city-name" placeholder="İl" />
+            </div>
+            <div class="form-group">
+              <label for="address">Adres</label>
+              <input type="text" class="form-control" id="address" placeholder="Adres" />
+            </div>
+            <div class="form-group">
+              <label for="tax-center-number">Posta Kodu</label>
+              <input type="number" class="form-control" id="tax-center-number" placeholder="Posta Kodu" />
+            </div>
+          </form>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
+          <div class="tm-section-title">İletişim Bilgileri</div>
+          <form class="tm-form-wide">
+            <div class="form-group">
+              <label for="center-phone">Merkez Telefonu</label>
+              <input type="tel" class="form-control" id="center-phone" placeholder="Merkez Telefonu" />
+            </div>
+            <div class="form-group">
+              <label for="whatsapp-address">Merkez Whatsapp No</label>
+              <input type="tel" class="form-control" id="whatsapp-phone" placeholder="Merkez Whatsapp No" />
+            </div>
+            <div class="form-group">
+              <label for="website">Websitesi</label>
+              <input type="text" class="form-control" id="website" placeholder="Websitesi" />
+            </div>
+            <div class="form-group">
+              <label for="center-about">Merkeziniz Hakkında</label>
+              <textarea class="form-control" id="center-about" rows="3" placeholder="Hakkında"></textarea>
+            </div>
+            <div class="tm-text-info">Merkezin sizin olduğunu doğrulayabilmemiz için bu bilgilerin doğru ve eksiksiz girildiğinden emin olun.</div>
+            <div class="tm-button-next left">
+              <a href="./clinic-details.html">
+                <button type="button" class="btn btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                  </svg></button
+              ></a>
+              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
