--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -1,5 +1,4 @@
 <div class="tm-main-content" id="top">
-
   <!--======= FOLLOW BAR =====-->
   <div id="section-i" class="tm-p tm-pt-20">
     <div class="container">
@@ -40,6 +39,15 @@
               <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
               <label class="form-check-label" for="flexCheckChecked"> Türkmed Diyaliz Merkezi / Kartal </label>
             </div>
+            <div class="tm-button-next left">
+              <a href="./clinic-details.html"
+                ><button type="button" class="btn btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                  </svg></button
+              ></a>
+              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+            </div>
           </form>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
@@ -59,16 +67,4 @@
       </div>
     </div>
   </div>
-  <!--======= PAGINATION =====-->
-  <div id="section-iii" class="tm-p tm-pb-20">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tm-button-next">
-          <a href="./clinic-choose-personal.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-          <a href="./clinic-company-information.html" class="btn-second">Sonraki Adım</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
 </div>
