--- a/src/views/clinic-panel/pages/add-clinic/choose-personel.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-personel.ejs
@@ -1,6 +1,4 @@
 <div class="tm-main-content" id="top">
-
-
   <!--======= FOLLOW BAR =====-->
   <div id="section-i" class="tm-p tm-pt-20">
     <div class="container">
@@ -51,11 +49,15 @@
                 </select>
               </div>
             </div>
-            <!-- <div class="form-group password">
-              <label for="login-password">Şifrenizi Giriniz</label>
-              <input type="password" class="form-control" id="login-password" placeholder="Şifreniz" />
-              <img src="../user/img/clinic/svg/show-password.svg" alt="Icon Arrow" />
-            </div> -->
+            <div class="tm-button-next left">
+              <a href="./clinic-details.html"
+                ><button type="button" class="btn btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                  </svg></button
+              ></a>
+              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+            </div>
           </form>
         </div>
 
@@ -80,11 +82,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 tm-button-next">
-          <a href="#" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-
-          <!-- Button trigger modal -->
-          <a type="submit"class="btn-second" >Sonraki Adım</a>
-
           <!-- Modal -->
           <div class="modal fade error-modal" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -99,5 +96,4 @@
       </div>
     </div>
   </div>
-
 </div>
