--- a/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-detail.ejs
@@ -1,5 +1,4 @@
 <div class="tm-main-content" id="top">
-
   <!--======= FOLLOW BAR =====-->
   <div id="section-i" class="tm-p-3 tm-pt-20">
     <div class="container">
@@ -137,12 +136,16 @@
                 <label class="form-check-label" for="flexCheckChecked"> Sedyeli Hasta Servisi </label>
               </div>
             </div>
+            <div class="tm-button-next left">
+              <a href="./clinic-details.html"
+                ><button type="button" class="btn btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                  </svg></button
+              ></a>
+              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+            </div>
           </form>
-          <!--======= PAGINATION =====-->
-          <div class="tm-button-next left">
-            <a href="./clinic-address-correction.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-            <a href="./clinic-services.html" class="btn-second mb-1">Sonraki Adım</a>
-          </div>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
           <div class="tm-section-title tm-clinic-subtitle"><a href="./clinic-services.html">Bu Adımı Atla</a></div>
@@ -171,5 +174,4 @@
       </div>
     </div>
   </div>
-
 </div>
