--- a/src/views/clinic-panel/pages/add-clinic/doctors.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/doctors.ejs
@@ -1,6 +1,4 @@
 <div class="tm-main-content" id="top">
-
-
   <!--======= FOLLOW BAR =====-->
   <div id="section-i" class="tm-p-3 tm-pt-20">
     <div class="container">
@@ -92,13 +90,16 @@
               <div class="text">Mesul Müdür: Dr. Mehtap Çelik Küçük</div>
               <div class="text">Sorumlu Hekim: Dr. Tekbir Atay</div>
             </div>
+            <div class="tm-button-next left">
+              <a href="./clinic-details.html"
+                ><button type="button" class="btn btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                  </svg></button
+              ></a>
+              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+            </div>
           </form>
-
-          <!--======= PAGINATION =====-->
-          <div class="tm-button-next left">
-            <a href="./clinic-payment-option.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-            <a href="./clinic-summary.html" class="btn-second">Sonraki Adım</a>
-          </div>
         </div>
         <!--======= INFORMATION CARD =====-->
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
@@ -126,7 +127,4 @@
       </div>
     </div>
   </div>
-
-
-
 </div>
