--- a/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/payment-option.ejs
@@ -1,5 +1,4 @@
 <div class="tm-main-content" id="top">
-
   <!--======= FOLLOW BAR =====-->
   <div id="section-i" class="tm-p-3 tm-pt-20">
     <div class="container">
@@ -117,6 +116,15 @@
                 <input type="text" class="form-control" id="explanation2" placeholder="Açıklayınız" />
               </div>
             </div>
+            <div class="tm-button-next left">
+              <a href="./clinic-details.html"
+                ><button type="button" class="btn btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
+                  </svg></button
+              ></a>
+              <a href="./clinic-payment-option.html"><button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button></a>
+            </div>
           </form>
         </div>
         <!--======= INFORMATION CARD =====-->
@@ -154,15 +162,7 @@
             </div>
           </div>
         </div>
-        <!--======= PAGINATION =====-->
-        <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <div class="tm-button-next left">
-            <a href="./clinic-services.html" class="btn-forth"><img src="../user/img/icons/left-arrow.png" alt="Icon Left" /></a>
-            <a href="./clinic-doctors.html" class="btn-second">Sonraki Adım</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
-
 </div>
